<resources>
    <string name="app_name">MoviesManager</string>
    <string name="movie_label">Filme:</string>
    <string name="movie_hint">Nome do filme</string>
    <string name="studio_label">Estúdio / Produtora:</string>
    <string name="studio_hint">Estúdio ou produtora</string>
    <string name="release_year_label">Ano de lançamento:</string>
    <string name="release_year_hint">0000</string>
    <string name="watched_label">Assistido</string>
    <string name="duration_label">Duração (minutos):</string>
    <string name="duration_hint">0</string>
    <string name="genre_label">Gênero:</string>
    <string name="save_button_label">Salvar</string>
    <string name="rate_label">Nota:</string>
    <string name="rate_hint">0.0</string>

    <string name="remove_item">Remover Item</string>
    <string name="edit_item">Editar Item</string>
    <string name="add_movie">Adicionar filme</string>
    <string name="sorted_by_name">Ordenar por nome</string>
    <string name="sorted_by_rate">Ordenar por nota</string>

    

    //menu
    <string name="menu_label">Menu</string>
    <string name="menu_add_movie_label">Adicionar filme</string>
    <string name="menu_add_genre">Adicionar gênero</string>

    <string-array name="movie_genres">
        <item>Ação</item>
        <item>Aventura</item>
        <item>Comédia</item>
        <item>Drama</item>
        <item>Ficção Científica</item>
        <item>Romance</item>
        <item>Suspense</item>
        <item>Terror</item>
    </string-array>

</resources>